--- a/P0-AboutMe/index.html
+++ b/P0-AboutMe/index.html
@@ -18,7 +18,7 @@
             </header>
             <section class="hero">
                 <div class="content">
-                    <img class="my-picture" src="images/my_picture.jpg" alt="Vempat Picture">
+                    <img class="my-picture" src="images/nlv_picture.jpg" alt="Vempat Picture">
                     <p class="iama">My name is...</p>
                     <p class="my-name my-info">Narasimham Vempati</p>
 
