change folders and add project 1

--- a/P0-AboutMe/index.html
+++ b/P0-AboutMe/index.html
@@ -13,12 +13,12 @@
             <header>
                 <div class="content header-content">
                     <img class="udacity-logo" src="http://cameronwp.github.io/cpcom/static/udacity_logo.svg" alt="Udacity Logo">
-                    <h1>Front-End Apprentice</h1>
+                    <h1>Front-End Developer</h1>
                 </div>
             </header>
             <section class="hero">
                 <div class="content">
-                    <img class="my-picture" src="images/nlv_picture.jpg" alt="Vempat Picture">
+                    <img class="my-picture" src="images/nlv_picture.JPG" alt="Vempati Picture">
                     <p class="iama">My name is...</p>
                     <p class="my-name my-info">Narasimham Vempati</p>
 
